kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-sample-api
spec:
  type: ClusterIP
  selector:
    app: go-sample-api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
