kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-sample-api
spec:
  ingressClassName: nginx
  rules:
  - host: api.angang.biz.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-sample-api
            port:
              number: 80
